fix(alert): Fix .message-icon and .message-content layout
Introducing the new CNVS .message object created layout issues with .message-icon and .message-content. Resolve layout issues.

--- a/src/styles/components/message/styles.less
+++ b/src/styles/components/message/styles.less
@@ -2,19 +2,25 @@
 
   .message {
 
-    // Align the icon next to content
-    align-items: flex-start;
-    display: flex;
+    .message-icon {
 
-    &-icon {
-      fill: currentColor;
-      flex: 0 0 auto;
-      margin-right: @message-icon-margin-right;
+      .element-spacing(message-icon, null, null);
+      .property-variant(message-icon, height, null, null);
+      .property-variant(message-icon, width, null, null);
+      cursor: pointer;
+      display: block;
+      float: left;
+
+      .icon {
+        vertical-align: top;
+      }
+
+      + .message-content {
+        .element-spacing(message-content, null, null);
+      }
     }
 
-    &-content {
-      flex: 1 1 auto;
-      word-break: break-word;
+    .message-content {
 
       // Remove top margin from the first child so we're not reliant on flush-top
       > :first-child {
@@ -27,17 +33,121 @@
       }
     }
 
-    // Make message content the same color by default
-    a,
-    p,
-    ul,
-    li,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5 {
+    /* Message Type Style */
+
+    .message-type-style {
       color: inherit;
+
+      a,
+      p,
+      ul,
+      li,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5 {
+        color: inherit;
+      }
+
+      li {
+
+        &:before {
+          .property-variant(message, background-color, color, null, null);
+        }
+      }
+    }
+  }
+}
+
+& when (@layout-screen-small-enabled) {
+
+  @media (min-width: @layout-screen-small-min-width) {
+
+    & when (@message-enabled) and (@message-screen-small-enabled) {
+      /* Message */
+
+      .message {
+
+        .message-icon {
+          .element-spacing(message-icon, null, screen-small);
+          .property-variant(message-icon, height, null, screen-small);
+          .property-variant(message-icon, width, null, screen-small);
+
+          + .message-content {
+            .element-spacing(message-content, null, screen-small);
+          }
+        }
+      }
+    }
+  }
+}
+
+& when (@layout-screen-medium-enabled) {
+
+  @media (min-width: @layout-screen-medium-min-width) {
+
+    & when (@message-enabled) and (@message-screen-medium-enabled) {
+      /* Message */
+
+      .message {
+
+        .message-icon {
+          .element-spacing(message-icon, null, screen-medium);
+          .property-variant(message-icon, height, null, screen-medium);
+          .property-variant(message-icon, width, null, screen-medium);
+
+          + .message-content {
+            .element-spacing(message-content, null, screen-medium);
+          }
+        }
+      }
+    }
+  }
+}
+
+& when (@layout-screen-large-enabled) {
+
+  @media (min-width: @layout-screen-large-min-width) {
+
+    & when (@message-enabled) and (@message-screen-large-enabled) {
+      /* Message */
+
+      .message {
+
+        .message-icon {
+          .element-spacing(message-icon, null, screen-large);
+          .property-variant(message-icon, height, null, screen-large);
+          .property-variant(message-icon, width, null, screen-large);
+
+          + .message-content {
+            .element-spacing(message-content, null, screen-large);
+          }
+        }
+      }
+    }
+  }
+}
+
+& when (@layout-screen-jumbo-enabled) {
+
+  @media (min-width: @layout-screen-jumbo-min-width) {
+
+    & when (@message-enabled) and (@message-screen-jumbo-enabled) {
+      /* Message */
+
+      .message {
+
+        .message-icon {
+          .element-spacing(message-icon, null, screen-jumbo);
+          .property-variant(message-icon, height, null, screen-jumbo);
+          .property-variant(message-icon, width, null, screen-jumbo);
+
+          + .message-content {
+            .element-spacing(message-content, null, screen-jumbo);
+          }
+        }
+      }
     }
   }
 }
